ATLAS-196: Distinguish between web and REST endpoints using an api folder

--- a/views/admin/admin.ejs
+++ b/views/admin/admin.ejs
@@ -7,7 +7,7 @@
             <a href="/admin/types"><p>Manage Types</p></a>
             <a href="/admin/versions"><p>Manage Versions</p></a>
             <a href="/admin/distributions"><p>Manage Distributions</p></a>
-            <a href="/markers/download"><p>Download Marker Data</p></a>
+            <a href="/api/markers/download"><p>Download Marker Data</p></a>
         </div>
     </div>            
 </div>
