--- a/views/admin/distributions/distributions.ejs
+++ b/views/admin/distributions/distributions.ejs
@@ -3,7 +3,7 @@
 <script>
 
 function fetchDistributions() {
-    $.ajax({url: "/distributions"})
+    $.ajax({url: "/api/distributions"})
         .always(function (data, textStatus) {
             if (textStatus != "success") {
                 return;
@@ -31,7 +31,7 @@ fetchDistributions();
 
 function deleteDistribution(id, name) {
     $.ajax({
-      url: "/distribution/"+id,
+      url: "/api/distribution/"+id,
       type: "DELETE",
       dataType: "json",
     })
