ATLAS-208: Search dialog behaves differently when authenticated

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -204,11 +204,11 @@
       <a href="/admin"><div class = "dropDownItemDiv" id="adminPage"><span class="glyphicon glyphicon-user"></span>Admin Page</div></a>
     <% } %>
     <div class = "dropDownItemDiv" id="locateMe"><img src="images/blue-dot.png">Locate Me</div>
-    <div class = "dropDownItemDiv" id="editSite" >
-    <img src="images/blue-dot.png">Edit my site</div>
+    <div class = "dropDownItemDiv" id="editSite" ><img src="images/blue-dot.png">Edit my site</div>
   <div class = "dropDownItemDiv" id="newSite"><img src="images/blue-dot.png">Add new site</div>
   <div class = "dropDownItemDiv" onClick="location.href='../logout'" id="logout"><span class="glyphicon glyphicon-log-out"></span>Logout</div>
   <div class="separatorDiv"></div>
+  </div>
 </div>
 <% }  else { %>
 <div class="atlas-container loginControl dropDownControl control" onClick="location.href='../login'" title="Click to sign in with your OpenMRS ID" id ="login">
