--- a/views/admin/types/editType.ejs
+++ b/views/admin/types/editType.ejs
@@ -68,7 +68,7 @@ $("#submit").click(function (e) {
     })
     .fail(function (jqXHR) {
         submitbtn.disabled = false;
-        console.log("Error saving marker type - Please try again ! - " + jqXHR.statusText);
+        console.log("Error saving marker type - Please try again ! - " + (jqXHR.responseJSON.message? jqXHR.responseJSON.message: jqXHR.statusText));
     });
 });
 
