--- a/views/admin/distributions/editDistribution.ejs
+++ b/views/admin/distributions/editDistribution.ejs
@@ -69,7 +69,7 @@ $("#submit").click(function (e) {
     })
     .fail(function (jqXHR) {
         submitbtn.disabled = false;
-        console.log("Error saving distribution - Please try again ! - " + jqXHR.statusText);
+        console.log("Error saving distribution - Please try again ! - " + (jqXHR.responseJSON.message? jqXHR.responseJSON.message: jqXHR.statusText));
     });
 });
 
