--- a/views/admin/distributions/newDistribution.ejs
+++ b/views/admin/distributions/newDistribution.ejs
@@ -53,7 +53,7 @@ $("#submit").click(function (e) {
     })
     .fail(function (jqXHR) {
         submitbtn.disabled = false;
-        console.log("Error creating distribution - Please try again ! - " + jqXHR.statusText);
+        console.log("Error creating distribution - Please try again ! - " + (jqXHR.responseJSON.message? jqXHR.responseJSON.message: jqXHR.statusText));
     });
 });
 
