--- a/views/admin/types/newType.ejs
+++ b/views/admin/types/newType.ejs
@@ -52,7 +52,7 @@ $("#submit").click(function (e) {
     })
     .fail(function (jqXHR) {
         submitbtn.disabled = false;
-        console.log("Error creating marker type - Please try again ! - " + jqXHR.statusText);
+        console.log("Error creating marker type - Please try again ! - " + (jqXHR.responseJSON.message? jqXHR.responseJSON.message: jqXHR.statusText));
     });
 });
 
