--- a/views/admin/types/types.ejs
+++ b/views/admin/types/types.ejs
@@ -39,7 +39,7 @@ function deleteType(id, name) {
             fetchTypes();
         })
         .fail(function(jqXHR, textStatus, errorThrown) {
-            console.log( "Error deleting type - Please try again ! - " + jqXHR.statusText );
+            console.log( "Error deleting type - Please try again ! - " + (jqXHR.responseJSON.message? jqXHR.responseJSON.message: jqXHR.statusText) );
             return;
         });
 }
