--- a/views/index.ejs
+++ b/views/index.ejs
@@ -69,7 +69,7 @@
     window.dataLayer = window.dataLayer || [];
     function gtag(){dataLayer.push(arguments);}
     gtag('js', new Date());
-    gtag('config', '${GOOGLE_ANALYTICS_TRACKING_ID}');
+    gtag('config', '<%= google_maps_api_key %>');
 
     function getParameterByName(name, url) {
       if (!url) url = window.location.href;
