--- a/public/css/data.css
+++ b/public/css/data.css
@@ -5,3 +5,32 @@ body {
 #sites-number {
     font-size: 90px;
 }
+
+#site-stats: {
+    position: relative;
+}
+
+#site-stats > div {
+    position: absolute;
+    top: 75px;
+    left: 50%;
+    transform: transformX(-50%);
+}
+
+#popular-modules {
+    overflow: scroll;
+    height: 400px;
+}
+
+.module-row {
+    font-size: 20px;
+    height: 40px;
+}
+
+.module-name {
+    color: blue;
+}
+
+.module-percent {
+    color: green;
+}
