--- a/views/data.ejs
+++ b/views/data.ejs
@@ -11,6 +11,7 @@
 
         <script src="/lib/js/jquery-1.11.1.min.js"></script>
         <script src="/lib/js/bootstrap.min.js"></script>
+        <script type="text/javascript" src="lib/js/bootbox.min.js"></script>
         <script id="globalnav-script" src="https://id.openmrs.org/globalnav/js/app-optimized.js" type="text/javascript"></script>
         <script src="/lib/js/plotly.min.js"></script>
     </head>
@@ -33,8 +34,21 @@
                     <div class="col-md-4" id="site-stats">
 
                     </div>
-                    <div class="col-md-8" id="type-stats">
-                        <h2>Marker Types</h2>
+                    <div class="col-md-8" id="country-stats">
+                        <div id="markers-choropleth"></div>                    
+                    </div>
+                </div>
+
+                <div class="row">
+                    <div class="col-md-7" id="module-stats">
+                        <h2>Popular Modules</h2>
+                        <div id="data-from"></div>
+                        <div id="popular-modules">
+                            <div></div>
+                        </div>                
+                    </div>
+                    <div class="col-md-5" id="type-stats">
+                        <h2>Site Types</h2>
                         <div id="type-plot"></div>
                     </div>
                 </div>
@@ -153,6 +167,71 @@
                 Plotly.newPlot('distribution-plot', plot);
             });
 
+            $.ajax({url: "/api/report/module"})
+            .always(function (modules, textStatus) {
+                if (textStatus != "success") {
+                    bootbox.alert({ message: "Error fetching site data! - " + data.statusText, backdrop: true });
+                    return;
+                }
+
+                var data_from_div = document.getElementById('data-from');
+                var popular_modules_div = document.getElementById('popular-modules');
+
+                var popular_modules = modules.map(function(module) { return { name: module.name, count: sum(Object.values(module.versions)) }; });
+                var ndata = popular_modules.filter(function(module) { return module.name==="Atlas Module"; })[0].count;
+                var popular_modules = popular_modules.filter(function(module) { return module.name!=="Atlas Module"; });
+                popular_modules.sort(function(a,b) { return b.count-a.count; });
+
+                data_from_div.innerHTML = "<h3>(data from "+ ndata +" sites)</h3>";
+                var html = "";
+
+                var count=1;
+                popular_modules.forEach(function(module) {
+                    html += "<div class='module-row'>" + count + ". <span class='module-name'>" + module.name + "</span> - <span class='module-percent'>" + Math.round(module.count*100/ndata) + "%</span></div>";
+                    count += 1;
+                });
+
+                popular_modules_div.innerHTML = html;
+            });
+
+            $.ajax({url: "/api/report/countries"})
+            .always(function (countries, textStatus) {
+                if (textStatus != "success") {
+                    bootbox.alert({ message: "Error fetching site data! - " + data.statusText, backdrop: true });
+                    return;
+                }
+
+                var data = [{
+                    type: 'choropleth',
+                    locations: Object.keys(countries),  // country codes
+                    z: Object.values(countries),    // number of markers in each country
+                    text: Object.keys(countries),
+                    colorscale: [
+                        [0, 'rgb(242,240,247)'], [0.2, 'rgb(218,218,235)'],
+                        [0.4, 'rgb(188,189,220)'], [0.6, 'rgb(158,154,200)'],
+                        [0.8, 'rgb(117,107,177)'], [1, 'rgb(84,39,143)']
+                    ],                
+                }];
+
+                var layout = {
+                    height: 500,
+                    width: 800,
+                    geo: {
+                        projection: {
+                            type: 'robinson'
+                        }
+                    },
+                };
+
+                Plotly.plot('markers-choropleth', data, layout, {showLink: false});
+            });
+
         });
+
+        function sum(arr) {
+            return arr.reduce(function (a, b) {
+                return a + b;
+            }, 0);
+        }
     </script>
 </html>
