ATLAS-212: replace missing markerclusterer resource

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -23,7 +23,7 @@
   <script type="text/javascript" src="js/tools.js"></script>
   <script type="text/javascript" src="js/module.js"></script>
   <script type="text/javascript" src="lib/js/yqlgeo.js"></script>
-  <script type="text/javascript" src="https://googlemaps.github.io/js-marker-clusterer/src/markerclusterer.js"></script>
+  <script type="text/javascript" src="lib/js/markerclusterer.min.js"></script>
   <script type="text/javascript" src="lib/js/html2canvas.min.js"></script>
   <script async src="https://www.googletagmanager.com/gtag/js?id=<%= google_analytics_tracking_id %>"></script>
   <script type="text/javascript">
