fix cropping of distribution data labels

--- a/views/data.ejs
+++ b/views/data.ejs
@@ -164,7 +164,8 @@
                     orientation: 'h'
                 }];
 
-                Plotly.newPlot('distribution-plot', plot);
+                Plotly.newPlot('distribution-plot', plot,
+                    {yaxis:{automargin:true}});
             });
 
             $.ajax({url: "/api/report/module"})
